--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <!--Importando bootstrap -->
+  <link type="text/css" rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/main.css">
-  <title>Document</title>
+  <title>Inicio de sesión</title>
 </head>
 <body>
+  
+  <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
+  <!--Enlazando js de bootstrap -->
+  <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
