--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
   <!--Importando bootstrap -->
   <link type="text/css" rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/main.css">
-  <title>Inicio de sesión</title>
+  <title>Miranda y Amado</title>
 </head>
 
 <body>
-  
+  <div>
+    <label>USUARIO</label>
+    <input class="email-login" type="text" placeholder="Ingresa tu correo"><br/>
+    <label>CONTRASEÑA</label>
+    <input class="password-login" type="text" placeholder="Ingresa contraseña">
+    <button class="btn-login">SING IN</button>
+    <P>CONECTARSE CON:</P>
+    <button class="btn-google">GMAIL</button>
+  </div>
   <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
   <!--Enlazando js de bootstrap -->
   <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
