--- a/index.html
+++ b/index.html
@@ -5,18 +5,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <!--Importando bootstrap -->
-  <link type="text/css" rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
   <title>Inicio de sesión</title>
 </head>
 
 <body>
-  
-  <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
-  <!--Enlazando js de bootstrap -->
-  <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
+  <div class="main">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-6 flex-logo">
+        <img src="assets/docs/logo.png" class="img-fluid logo mx-auto d-block" alt="Responsive image">
+        <p class="text-center text-blue-miranda text-p">Enfocados en la prevención y solución de conflictos laborales.</p>
+        <!-- formulario de inicio de sesión-->
+      </div>
+      
+      <div class="col-12 col-md-6">
+        <div class="d-flex justify-content-center">
+          <div class="col-10 border-form">
+            <p class="text-center text-gold-amado welcome">Bienvenido</p>
+            <form>
+              <div class="form-group text-blue-miranda ">
+                <label for="exampleInputEmail1">Correo electrónico</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="abecede@correo.com">
+                <small id="emailHelp" class="form-text text-muted">Es agradable trabajar juntos.</small>
+              </div>
+              <div class="form-group text-blue-miranda">
+                <label for="exampleInputPassword1">Contraseña</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="*******">
+              </div>
+              <!--comentando el checkbox
+              <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              </div> -->
+              <button type="submit" class="btn btn-block">Ingresar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
+</div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script> 
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <script src="js/app.js"></script>
 </body>
