--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 
 <body>
-
-
-
-
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="checkbox1" value="option1">
+      <label class="form-check-label" for="checkbox1">Sindicato</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="checkbox2" value="option2">
+      <label class="form-check-label" for="checkbox2">Industria</label>
+    </div>
+      <div id="section"></div>
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
 </body>
 
