--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <input class="form-check-input" type="checkbox" id="checkbox2" value="option2">
       <label class="form-check-label" for="checkbox2">Industria</label>
     </div>
-      <div id="section"></div>
+    <div id="section"></div>
+    <div id="section-2"></div>
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
