modificando el nombre del archivo app.js ---> filter.js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="section-2"></div>
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="js/app.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 
 </html>
